<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Walaka</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="reset_password_button">RESET PASSWORD</string>
    <string name="action_send">Send</string>
    <string name="empty_inbox_label">No New Messages</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="action_logout">Log Out</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_login">Login</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="sign_up_label"> SIGN UP</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="title_activity_signup">Signup</string>
    <string name="email_hint">Please enter your email address</string>
    <string name="signup_error_message">Please make sure to enter a username, password and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure to enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="menu_camera_label">Camera</string>
    <string name="general_error">Sorry there was an error!</string>
    <string name="video_message">The selected video must be less than 10MB and have a maximum length of 10 seconds</string>

    <string-array name="camera_choices">
        <item>Take a Pic!</item>
        <item>Take a Video!</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="error_external_storage">"There was a problem accessing your device\'s external storage"</string>
    <string name="filesize_error">There was a problem with the selected file!</string>
    <string name="file_size_warning">The selected file is to large, please select a new file!</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose Some Friends First!</string>
    <string name="password_change_request_success">You have requested to change your password, please check your email inbox!</string>
    <string name="error_selecting_title">There was an error with the file selected. Please select another file.</string>
    <string name="error_selecting_message_title">Were Sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error getting your message.</string>
    <string name="title_activity_view_image">Walaka</string>
    <string name="action_settings">Settings</string>
    <string name="subtitle_message">A \'The Tech Guys\' Product</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="push_message">"Checka Etumwalaka from %s!"</string>
    <string name="facebook_app_id">1617383535141665</string>
    <string name="content_desc">User checkmark</string>
    <string name="content_desc_user_avatar">User Avatar</string>


</resources>
