<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.thetechguys.walaka.ui.LoginActivity"
    style="@style/AuthBackground"
    android:clickable="true">

    <TextView
        android:text="@string/app_name"
        android:id="@+id/Title"

        style="@style/TitleLabel"/>



    <TextView
        android:id="@+id/subtitle"
        android:text="@string/subtitle_message"
        style="@style/SubtitleLabel"/>

    <LinearLayout
        android:id="@+id/inputLayout"
        style="@style/InputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"

            android:textColorHint="@color/light_gray"
            android:ems="10"
            android:textSize="18sp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"

            android:id="@+id/passwordField"
            android:textColorHint="@color/light_gray"
            android:hint="@string/password_hint"
            android:textSize="18sp"
            />

        </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_label"
        android:id="@+id/loginButton"
        android:layout_centerVertical="true"
        android:layout_below="@id/inputLayout"
        android:textColor="@android:color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="@dimen/login_vertical_side_margin"
        android:layout_marginRight="@dimen/login_vertical_side_margin"
        android:textSize="13sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:id="@+id/signupText"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_password_text"
        android:id="@+id/ForgotPasswordtextView"
        android:layout_below="@+id/signupText"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>
