<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.thetechguys.walaka.ui.ForgotPasswordActivity"
    android:background="@drawable/bg_gradient">

    <TextView
    android:text="@string/app_name"
    android:id="@+id/Title"

    style="@style/TitleLabel"/>



    <TextView
        android:id="@+id/subtitle"
        android:text="@string/subtitle_message"
        style="@style/SubtitleLabel"/>



    <LinearLayout
        android:id="@+id/inputLayout"
        style="@style/InputLayout">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/resetEmailText"

        android:hint="@string/email_hint"
        />
</LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:background="@drawable/button_custom"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/reset_password_button"
        android:layout_marginLeft="@dimen/login_vertical_side_margin"
        android:layout_marginRight="@dimen/login_vertical_side_margin"
        android:id="@+id/resetEmail_button"
        android:layout_below="@+id/inputLayout"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_label"
        android:id="@+id/cancelButtonForgot"
       android:layout_below="@id/resetEmail_button"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="@dimen/login_vertical_side_margin"
        android:layout_marginRight="@dimen/login_vertical_side_margin"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        />





</RelativeLayout>
