<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.thetechguys.walaka.ui.SignupActivity"
    style="@style/AuthBackground">

    <TextView
        android:text="@string/app_name"
        android:id="@+id/Title"

        style="@style/TitleLabel"/>



    <TextView
        android:id="@+id/subtitle"
        android:text="@string/subtitle_message"
        style="@style/SubtitleLabel"/>



    <LinearLayout
        android:id="@+id/inputLayout"
        style="@style/InputLayout">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"

        android:hint="@string/username_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"

        android:hint="@string/password_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField"

        android:hint="@string/email_hint"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayout"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_label"
            android:id="@+id/signupButton"


            android:background="@drawable/button_custom"
            android:layout_marginLeft="@dimen/login_vertical_side_margin"
            android:layout_marginRight="@dimen/login_vertical_side_margin"
            android:textSize="13sp"
            android:textColor="@android:color/white"
            android:layout_weight="1"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_label"
            android:id="@+id/cancelButton"

            android:background="@drawable/button_custom"
            android:layout_marginLeft="@dimen/login_vertical_side_margin"
            android:layout_marginRight="@dimen/login_vertical_side_margin"
            android:textSize="13sp"
            android:textColor="@android:color/white"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:id="@+id/facbookLogin"
        android:text="Login with Facebook"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:layout_marginLeft="@dimen/login_vertical_side_margin"
        android:layout_marginRight="@dimen/login_vertical_side_margin"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/com_facebook_button_background_color"/>

</RelativeLayout>
